# statsd-mock-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: post-release.yml  rust.yml
examples/: advanced.rs  capture.rs  comprehensive.rs  error_handling.rs
src/: lib.rs
