[package]
name = "statsd-mock"
version = "0.2.0"
edition = "2021"
rust-version = "1.63.0"
description = "Mock StatsD server for testing with intelligent timing and structured packet parsing"
license-file = "LICENSE"
authors = ["Duyet Le <me@duyet.net>"]
readme = "README.md"
keywords = ["statsd", "mock", "testing", "metrics"]
categories = ["development-tools::testing"]
repository = "https://github.com/duyet/statsd-mock-rs"
documentation = "https://docs.rs/statsd-mock"

[dependencies]
itertools = "0.14"

[dev-dependencies]
statsd = "0.16"
